[gd_scene load_steps=20 format=3 uid="uid://ul8a33rsc5o4"]

[ext_resource type="PackedScene" uid="uid://cjcmn1g4vfh8e" path="res://Scenes/map8x8.tscn" id="2_u2oq0"]
[ext_resource type="Script" path="res://Scripts/util.gd" id="3_r3ry7"]
[ext_resource type="Script" path="res://Scripts/level_generator.gd" id="4_cmfno"]
[ext_resource type="Script" path="res://Scripts/editor.gd" id="4_nvvvx"]
[ext_resource type="Script" path="res://Scripts/game_state_manager.gd" id="5_phmd4"]
[ext_resource type="PackedScene" uid="uid://bysqedydgeakv" path="res://Scenes/map4x4.tscn" id="6_f5ijx"]
[ext_resource type="PackedScene" uid="uid://cxidqolshdlac" path="res://Scenes/map6x6.tscn" id="7_6jo0a"]
[ext_resource type="PackedScene" uid="uid://d0dm54nlu3hbr" path="res://Scenes/assets.tscn" id="8_gfadf"]
[ext_resource type="PackedScene" uid="uid://bb3b503xrvj7m" path="res://Scenes/player1.tscn" id="8_wa28c"]
[ext_resource type="PackedScene" uid="uid://d3kikj28cfn8h" path="res://Scenes/enemy1.tscn" id="9_aubv4"]
[ext_resource type="PackedScene" uid="uid://b60h1emnunq1s" path="res://Scenes/civilian1.tscn" id="10_wdovn"]
[ext_resource type="PackedScene" uid="uid://8bvhgfxla8ng" path="res://Scenes/progress.tscn" id="11_4i00g"]
[ext_resource type="ButtonGroup" uid="uid://by0pbsfufftxo" path="res://Other/shoot_action_button_group.tres" id="12_yqnhu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oi1vl"]

[sub_resource type="InputEventKey" id="InputEventKey_c3o0l"]
device = -1
keycode = 32
unicode = 32

[sub_resource type="Shortcut" id="Shortcut_mhvaf"]
events = [SubResource("InputEventKey_c3o0l")]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l1dh4"]

[sub_resource type="InputEventKey" id="InputEventKey_comoe"]
device = -1
keycode = 4194309

[sub_resource type="Shortcut" id="Shortcut_8tcml"]
events = [SubResource("InputEventKey_comoe")]

[node name="Editor" type="Node3D"]
script = ExtResource("4_nvvvx")
map_scenes = Array[PackedScene]([ExtResource("6_f5ijx"), ExtResource("7_6jo0a"), ExtResource("2_u2oq0")])
player_scenes = Array[PackedScene]([ExtResource("8_wa28c")])
enemy_scenes = Array[PackedScene]([ExtResource("9_aubv4")])
civilian_scenes = Array[PackedScene]([ExtResource("10_wdovn")])
assets_scene = ExtResource("8_gfadf")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.707107, -0.45452, 0.541675, 0, 0.766045, 0.642788, -0.707107, -0.45452, 0.541675, 12, 13.2, 12)
fov = 21.0
size = 8.604

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.766045, 0.492404, -0.413176, 0, 0.642788, 0.766045, 0.642788, -0.586824, 0.492404, 0, 5, 0)
shadow_enabled = true

[node name="Util" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7, 0)
script = ExtResource("3_r3ry7")

[node name="LevelGenerator" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8, 0)
script = ExtResource("4_cmfno")

[node name="GameStateManager" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9, 0)
script = ExtResource("5_phmd4")
map_scenes = Array[PackedScene]([ExtResource("6_f5ijx"), ExtResource("7_6jo0a"), ExtResource("2_u2oq0")])
player_scenes = Array[PackedScene]([ExtResource("8_wa28c")])
enemy_scenes = Array[PackedScene]([ExtResource("9_aubv4")])
civilian_scenes = Array[PackedScene]([ExtResource("10_wdovn")])
progress_scene = ExtResource("11_4i00g")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="GameInfoLabel" type="Label" parent="CanvasLayer/UI"]
layout_mode = 1
offset_right = 76.0
offset_bottom = 75.0
text = "LEVEL: 0
TURN: 0
POINTS: 0"

[node name="EditorLabel" type="Label" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -105.5
offset_right = 105.5
offset_bottom = 23.0
grow_horizontal = 2
text = "NOTHING"

[node name="PlayerInfoContainer" type="HBoxContainer" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -267.0
offset_bottom = 171.0
grow_horizontal = 0

[node name="TileInfoLabel" type="Label" parent="CanvasLayer/UI/PlayerInfoContainer"]
layout_mode = 2
text = "ONLY SHOWS INFO
WHEN PLAYING"

[node name="PlayerButtons" type="VBoxContainer" parent="CanvasLayer/UI/PlayerInfoContainer"]
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="CanvasLayer/UI/PlayerInfoContainer/PlayerButtons"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_oi1vl")
shortcut = SubResource("Shortcut_mhvaf")
text = "MAIN_MENU"

[node name="EndTurnButton" type="Button" parent="CanvasLayer/UI/PlayerInfoContainer/PlayerButtons"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_oi1vl")
disabled = true
shortcut = SubResource("Shortcut_mhvaf")
text = "END TURN"

[node name="ShootButton" type="Button" parent="CanvasLayer/UI/PlayerInfoContainer/PlayerButtons"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_l1dh4")
disabled = true
toggle_mode = true
button_group = ExtResource("12_yqnhu")
shortcut = SubResource("Shortcut_8tcml")
text = "SHOOT"

[node name="ActionButton" type="Button" parent="CanvasLayer/UI/PlayerInfoContainer/PlayerButtons"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_l1dh4")
disabled = true
toggle_mode = true
button_group = ExtResource("12_yqnhu")
shortcut = SubResource("Shortcut_8tcml")
text = "ACTION"

[node name="UndoButton" type="Button" parent="CanvasLayer/UI/PlayerInfoContainer/PlayerButtons"]
layout_mode = 2
disabled = true
text = "UNDO"

[node name="EditorContainer" type="VBoxContainer" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="PlayButton" type="Button" parent="CanvasLayer/UI/EditorContainer"]
layout_mode = 2
text = "PLAY"

[node name="SaveButton" type="Button" parent="CanvasLayer/UI/EditorContainer"]
layout_mode = 2
text = "SAVE"

[node name="LoadButton" type="Button" parent="CanvasLayer/UI/EditorContainer"]
layout_mode = 2
text = "LOAD"

[node name="DeleteButton" type="Button" parent="CanvasLayer/UI/EditorContainer"]
layout_mode = 2
toggle_mode = true
text = "DELETE"

[node name="MapsOptionButton" type="OptionButton" parent="CanvasLayer/UI/EditorContainer"]
layout_mode = 2
expand_icon = true
item_count = 4
selected = 0
fit_to_longest_item = false
popup/item_0/text = "MAPS"
popup/item_0/id = 0
popup/item_0/separator = true
popup/item_1/text = "4x4"
popup/item_1/id = 1
popup/item_2/text = "6x6"
popup/item_2/id = 2
popup/item_3/text = "8x8"
popup/item_3/id = 3

[node name="TilesOptionButton" type="OptionButton" parent="CanvasLayer/UI/EditorContainer"]
layout_mode = 2
expand_icon = true
item_count = 3
selected = 0
fit_to_longest_item = false
popup/item_0/text = "TILES"
popup/item_0/id = 0
popup/item_0/separator = true
popup/item_1/text = "PLAIN"
popup/item_1/id = 1
popup/item_2/text = "TREE"
popup/item_2/id = 2

[node name="AssetsOptionButton" type="OptionButton" parent="CanvasLayer/UI/EditorContainer"]
layout_mode = 2
expand_icon = true
item_count = 2
selected = 0
fit_to_longest_item = false
popup/item_0/text = "ASSETS"
popup/item_0/id = 0
popup/item_0/separator = true
popup/item_1/text = "SIGN"
popup/item_1/id = 1

[node name="PlayersOptionButton" type="OptionButton" parent="CanvasLayer/UI/EditorContainer"]
layout_mode = 2
expand_icon = true
item_count = 4
selected = 0
fit_to_longest_item = false
popup/item_0/text = "PLAYERS"
popup/item_0/id = 0
popup/item_0/separator = true
popup/item_1/text = "PLAYER 1"
popup/item_1/id = 1
popup/item_2/text = "PLAYER 2"
popup/item_2/id = 2
popup/item_3/text = "PLAYER 3"
popup/item_3/id = 3

[node name="EnemiesOptionButton" type="OptionButton" parent="CanvasLayer/UI/EditorContainer"]
layout_mode = 2
expand_icon = true
item_count = 4
selected = 0
fit_to_longest_item = false
popup/item_0/text = "ENEMIES"
popup/item_0/id = 0
popup/item_0/separator = true
popup/item_1/text = "ENEMY 1"
popup/item_1/id = 1
popup/item_2/text = "ENEMY 2"
popup/item_2/id = 2
popup/item_3/text = "ENEMY 3"
popup/item_3/id = 3

[node name="CiviliansOptionButton" type="OptionButton" parent="CanvasLayer/UI/EditorContainer"]
layout_mode = 2
expand_icon = true
item_count = 4
selected = 0
fit_to_longest_item = false
popup/item_0/text = "CIVILIANS"
popup/item_0/id = 0
popup/item_0/separator = true
popup/item_1/text = "CIVILIAN 1"
popup/item_1/id = 1
popup/item_2/text = "CIVILIAN 2"
popup/item_2/id = 2
popup/item_3/text = "CIVILIAN 3"
popup/item_3/id = 3

[connection signal="pressed" from="CanvasLayer/UI/PlayerInfoContainer/PlayerButtons/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/PlayerInfoContainer/PlayerButtons/EndTurnButton" to="GameStateManager" method="_on_end_turn_button_pressed"]
[connection signal="toggled" from="CanvasLayer/UI/PlayerInfoContainer/PlayerButtons/ShootButton" to="GameStateManager" method="_on_shoot_button_toggled"]
[connection signal="toggled" from="CanvasLayer/UI/PlayerInfoContainer/PlayerButtons/ActionButton" to="GameStateManager" method="_on_action_button_toggled"]
[connection signal="pressed" from="CanvasLayer/UI/PlayerInfoContainer/PlayerButtons/UndoButton" to="GameStateManager" method="_on_undo_button_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/EditorContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/EditorContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/EditorContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="toggled" from="CanvasLayer/UI/EditorContainer/DeleteButton" to="." method="_on_delete_button_toggled"]
[connection signal="item_selected" from="CanvasLayer/UI/EditorContainer/MapsOptionButton" to="." method="_on_maps_option_button_item_selected"]
[connection signal="item_selected" from="CanvasLayer/UI/EditorContainer/TilesOptionButton" to="." method="_on_tiles_option_button_item_selected"]
[connection signal="item_selected" from="CanvasLayer/UI/EditorContainer/AssetsOptionButton" to="." method="_on_assets_option_button_item_selected"]
[connection signal="item_selected" from="CanvasLayer/UI/EditorContainer/PlayersOptionButton" to="." method="_on_players_option_button_item_selected"]
[connection signal="item_selected" from="CanvasLayer/UI/EditorContainer/EnemiesOptionButton" to="." method="_on_enemies_option_button_item_selected"]
[connection signal="item_selected" from="CanvasLayer/UI/EditorContainer/CiviliansOptionButton" to="." method="_on_civilians_option_button_item_selected"]
